Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 2.1.14
    Mycelium removed from Woodcutting XP tables (because its soil!)
    Kelp added to Herbalism XP tables
    mcMMO now flags blocks moved by piston as not natural to prevent automated XP farms
    Fixed a bug where Fuel Efficiency was way too good
    Fixed a display issue with Fisherman's Diet
    Fuel Efficiency now uses the rank system
    Removed Fuel Efficiency config options in advanced.yml
    Added Tropical Fish, Raw Cod, Raw Salmon to the list of foods that benefit from Fisherman's Diet

Version 2.1.13
    Fixed a bug where Archery's Arrow Retrieval was using the wrong permission node

Version 2.1.12
    Salvage config entries are no longer case sensitive
    Fixed a bug where Fishing was not rewarding vanilla XP orbs

Version 2.1.11
    Fixed a bug where Rupture was using the wrong permission node (new permission node: mcmmo.ability.swords.rupture)

Version 2.1.10
    Fishing command did an oopsie
    Endstone now gives the same XP as Stone (update your experience.yml)

Version 2.1.9
    Fixed a bug where grabbing the version of WG would throw classnotdefined errors

Version 2.1.8
    mcMMO now checks for WG 7 before attempting to use the WG API
    Made some optimizations for our WG integration
    Fixed a bug where Bite chance for Master Angler was displaying too many decimal places
    Fixed a bug where Abilities didn't check for permission nodes before activating
    MaxBonusLevel now has specific entries for Standard and Retro in advanced.yml
    MaxBonusLevel for Critical Strikes changed from 75/750 to 100/1000
    MaxBonusLevel of Dodge changed from 80/800 to 100/1000
    MaxBonusLevel of Rupture changed from 20/200 to 100/1000
    MaxBonusLevel of Counter Attack changed from 60/600 to 100/1000

Version 2.1.7